--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "graphql": "^15.4.0",
     "bootstrap": "^5.3.0",
     "react-bootstrap": "^2.7.4",
+    "jwt-decode": "^2.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.1.2",
